syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "Enumerations.proto";
import "Miscellaneous.proto";

message DeleteTrainingRequest {
  string userIdentifier = 1;
  string trainingIdentifier = 2;
}

message DeleteTrainingResponse {
  
}

message GetTrainingsRequest {
    string userIdentifier = 1;
  }
  
message GetTrainingsResponse {
    repeated Training trainings = 1;
  }
  
message GetTrainingRequest {
    string userIdentifier = 1;
    string trainingIdentifier = 2;
  }
  
message GetTrainingResponse {
  Training training = 1;
}

message Training {
    string status = 1;
    repeated AdapterStatus adapters = 2;
    string datasetIdentifier = 3;
    string datasetName = 4;
    string task = 5;
    string configuration = 6;
    repeated string selectedMlLibraries = 7;
    repeated string selectedAutoMls = 8;
    string runtimeConstraints = 9;
    string datasetConfiguration = 10;
    string identifier = 11;
    google.protobuf.Timestamp startTime = 12;
    repeated StrategyControllerEvent events = 13;
  }
 

message AdapterStatus {
    string name = 1;
    string status = 2;
    repeated string messages = 3;
    float testScore = 4;
    float validationScore = 5;
    int32 runtime = 6;
    float predictiontime = 7;
    string library = 8;
    string model = 9;
    string identifier = 10;
  }

message StrategyControllerEvent {
    string type = 1;
    string meta = 2;
    google.protobuf.Timestamp timestamp = 3;
  }
  

message StartTrainingRequest {
  string userIdentifier = 1;
  string datasetIdentifier = 2;
  string task = 3;
  string configuration = 4;
  repeated string selectedAutoMls = 5;
  string runtimeConstraints = 6;
  string datasetConfiguration = 7;
  string testConfiguration = 8;
  string metric = 9;
  repeated string selectedLibraries = 10;
}


message StartTrainingResponse {
  string trainingIdentifier = 1;
}